@@ -176,20 +176,10 @@ void PIA_PutByte(UWORD addr, UBYTE byte)
 
 void PIA_StateSave(void)
 {
-	int Ram256 = 0;
-	if (MEMORY_ram_size == MEMORY_RAM_320_RAMBO)
-		Ram256 = 1;
-	else if (MEMORY_ram_size == MEMORY_RAM_320_COMPY_SHOP)
-		Ram256 = 2;
-
 	StateSav_SaveUBYTE( &PIA_PACTL, 1 );
 	StateSav_SaveUBYTE( &PIA_PBCTL, 1 );
 	StateSav_SaveUBYTE( &PIA_PORTA, 1 );
 	StateSav_SaveUBYTE( &PIA_PORTB, 1 );
-
-	StateSav_SaveINT( &MEMORY_xe_bank, 1 );
-	StateSav_SaveINT( &MEMORY_selftest_enabled, 1 );
-	StateSav_SaveINT( &Ram256, 1 );
 
 	StateSav_SaveINT( &MEMORY_cartA0BF_enabled, 1 );
 
@@ -197,9 +187,8 @@ void PIA_StateSave(void)
 	StateSav_SaveUBYTE( &PIA_PORTB_mask, 1 );
 }
 
-void PIA_StateRead(void)
+void PIA_StateRead(UBYTE version)
 {
-	int Ram256 = 0;
 	UBYTE byte;
 
 	StateSav_ReadUBYTE( &PIA_PACTL, 1 );
@@ -213,16 +202,17 @@ void PIA_StateRead(void)
 	StateSav_ReadUBYTE( &PIA_PORTA, 1 );
 	StateSav_ReadUBYTE( &PIA_PORTB, 1 );
 
-	StateSav_ReadINT( &MEMORY_xe_bank, 1 );
-	StateSav_ReadINT( &MEMORY_selftest_enabled, 1 );
-	StateSav_ReadINT( &Ram256, 1 );
+	/* In version 7 and later these variables are read in memory.c. */
+	if (version <= 6) {
+		int Ram256;
+		StateSav_ReadINT( &MEMORY_xe_bank, 1 );
+		StateSav_ReadINT( &MEMORY_selftest_enabled, 1 );
+		StateSav_ReadINT( &Ram256, 1 );
 
-	if (Atari800_machine_type == Atari800_MACHINE_XLXE) {
-		if (Ram256 == 1 && MEMORY_ram_size == MEMORY_RAM_320_COMPY_SHOP)
-			/* Occurs only for states of version 6 and lower. */
-			MEMORY_ram_size = MEMORY_RAM_320_RAMBO;
-		else if (Ram256 == 2 && MEMORY_ram_size == MEMORY_RAM_320_RAMBO)
-			MEMORY_ram_size = MEMORY_RAM_320_COMPY_SHOP;
+		if (Atari800_machine_type == Atari800_MACHINE_XLXE) {
+			if (Ram256 == 1 && MEMORY_ram_size == MEMORY_RAM_320_COMPY_SHOP)
+				MEMORY_ram_size = MEMORY_RAM_320_RAMBO;
+		}
 	}
 
 	StateSav_ReadINT( &MEMORY_cartA0BF_enabled, 1 );
