@@ -1,3 +1,13 @@
+2012-03-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* memory.c, pia.[ch], statesav.c: Fix 2 errors related to separate access
+  of CPU and ANTIC to XE RAM:
+  - Self-Test should be visible also in the bank seen by ANTIC.
+  - When saving/loading a savestate in which only ANTIC has access to XE RAM,
+  XE bank number was not saved/loaded correctly. To fix this, loading/saving
+  of MEMORY_xe_bank had to be moved from PIA_StateRead to MEMORY_StateRead; so
+  I also moved a few other variables in those functions to where they belong.
+
+
 2012-02-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * cfg.c, memory.[ch], ui.c: Allow choosing more RAM amounts for 400/800, based
   on possible combinations of CX852 and CX853 memory modules. Extending the
